Fix homepage overflow and side social button z-index

--- a/css/main.css
+++ b/css/main.css
@@ -427,6 +427,7 @@ Social Media links
 .social{
   position: fixed;
   height: 100vh;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   justify-content: center;
